--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Remove bottom margin/padding from the navbar */
+.navbar {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+/* Remove top margin/padding from the content below the navbar */
+.home-page {
+    margin-top: 0;
+    padding-top: 0;
+}
